# infra

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .gitleaks.toml  .gitleaksignore  .lefthook.yml  .pre-commit-config.yaml  .tflint.hcl  .yamllint.yml  README.md  ansible.cfg  mkdocs.yml  pyproject.toml  vagrant.yml
.cursor/rules/: project.mdc  terraform.mdc
.github/: labeler.yml
.github/workflows/: ansible-lint.yml  ansible.yml  ci.yml  docs.yml  labeler.yml  pr-automation.yml  security.yml  terraform.yml
ansible/: ansible.cfg  requirements.yml
ansible/collections/: requirements.yml
ansible/group_vars/: all.yml  internal_dns.yml  production.yml  staff.yml
ansible/inventories/: dynamic.py
ansible/playbooks/: dynamic-deploy.yml  site.yml
ansible/playbooks/domains/: generic-domain.yml
ansible/playbooks/domains/templates/: atl_tools-compose.yml.j2  atl_tools.env.j2
ansible/playbooks/emergency/: isolate-service.yml  service-restart.yml
ansible/playbooks/infrastructure/: database-cluster.yml  internal-dns.yml  set-internal-dns.yml
ansible/playbooks/infrastructure/templates/: database-cluster-compose.yml.j2  database-cluster.env.j2  monitoring-compose.yml.j2
ansible/playbooks/maintenance/: cleanup.yml  update-services.yml
ansible/playbooks/monitoring/templates/: prometheus.yml.j2
ansible/playbooks/operations/: daily-ops.yml
ansible/playbooks/security/: compliance-check.yml  hardening.yml
ansible/playbooks/users/: staff-management.yml
ansible/playbooks/validation/: health-check.yml
ansible/roles/docker/meta/: main.yml
ansible/roles/system/defaults/: main.yml
ansible/roles/system/handlers/: main.yml
ansible/roles/system/meta/: main.yml
ansible/roles/system/tasks/: main.yml
ansible/roles/system/templates/: atl-environment.sh.j2
ansible/roles/tux/: README.md
ansible/roles/tux/meta/: main.yml
ansible/roles/tux/templates/: docker-compose.yml.j2  env.j2  settings.yml.j2
ansible/tasks/: monitoring-integration.yml  service-verification.yml  update-reverse-proxy.yml
ansible/tasks/templates/: health-check.sh.j2  loki-config.yml.j2  service-discovery.yml.j2
archive/: README.md  STRUCTURE.md  Vagrantfile  mkdocs.yml  pyproject.toml
archive/.github/workflows/: labeler.yml  security.yml
archive/ansible/: requirements.yml
archive/ansible/group_vars/: README.md  domains_config.yml
archive/ansible/group_vars/domains/: atl_chat.yml  atl_dev.yml  atl_services.yml  atl_tools.yml  atl_wiki.yml
archive/ansible/group_vars/services/: apps.yml  core.yml  infrastructure.yml  monitoring.yml  user_roles.yml  users.yml
archive/ansible/host_vars/: README.md
archive/ansible/inventories/: dynamic.py
archive/ansible/playbooks/: site.yml
archive/ansible/playbooks/infrastructure/: backup-setup.yml  bootstrap.yml
archive/ansible/playbooks/maintenance/: ssl-renewal.yml
archive/ansible/playbooks/monitoring/: configure-alerts.yml  deploy-stack.yml
archive/ansible/playbooks/users/: setup-users.yml
archive/ansible/playbooks/validation/: backup-verification.yml  health-check.yml
archive/ansible/roles/system/: README.md
archive/ansible/roles/tux/: README.md
archive/ansible/roles/tux/meta/: main.yml
archive/ansible/tasks/: cross-service-config.yml  firewall.yml  service-monitoring.yml  service-verification.yml
archive/ansible/templates/: README.md
archive/ansible/templates/infrastructure/: 50unattended-upgrades.j2  alert-rules.yml.j2  audit_rules.j2  borgmatic-config.yaml.j2  emergency_access.sh.j2  jail.local.j2
archive/ansible/templates/monitoring/: README.md  alerting-rules.yml.j2  alertmanager.yml.j2  docker-compose.yml.j2  promtail-config.yml.j2  service-monitoring.yml.j2
archive/ansible/templates/services/: atl_tools-monitoring.yml.j2
archive/config/: README.md  environments.yml  secrets.example.yml
archive/config/security/: .trivyignore
archive/docs/: index.md
archive/docs/assets/: extra.css
archive/docs/automation/: cli-tools.md  inventory.md  playbooks.md  roles.md
archive/docs/guides/: development-environment.md  development.md  infrastructure.md  minimal-user-management.md  rbac-refactoring-summary.md  rbac-system.md  security.md
archive/docs/guides/access-control-models/: abac-pattern.yml  comparison.md  dac-pattern.yml  mac-pattern.yml  pbac-pattern.yml
archive/docs/infrastructure/: diagrams.md  terraform-configuration.md
archive/docs/integrations/: hetzner.md
archive/docs/reference/: commands.md  configuration.md
archive/docs/setup/: installation.md
archive/scripts/: README.md  __init__.py  cli.py
archive/scripts/commands/: deploy.py  diagrams.py  docs.py  update_collections.py
archive/scripts/common/: __init__.py  config.py
archive/scripts/setup/: setup-uv.sh
archive/terraform/: .gitignore  OPENTOFU.md  README.md  domains.tf
archive/terraform/scripts/: install_opentofu.sh
configs/: domains.yml  environments.yml
docs/assets/: extra.js
docs/automation/: cli-tools.md  playbooks.md  roles.md
docs/guides/: deployment.md  development-environment.md  development.md  infrastructure.md  secrets-management.md
docs/infrastructure/: overview.md  terraform-configuration.md  terraform.md
docs/integrations/: cloudflare.md  hetzner.md
docs/reference/: commands.md  configuration.md  troubleshooting.md
docs/setup/: configuration.md  installation.md
monitoring/alerting/: rules.yml
scripts/: README.md  cli.py
scripts/commands/: __init__.py  deploy.py  diagrams.py  docs.py  lint.py  update_collections.py
scripts/common/: config.py  logging.py
scripts/setup/: setup-cloudflare.sh  setup-hooks.sh  setup-poetry.sh  setup-secrets.sh  setup-terraform.sh  setup-uv.sh
terraform/: README.md  domains.tf  load_balancer.tf  main.tf  outputs.tf  variables.tf
terraform/environments/development/: README.md  main.tf  terraform.tfvars.example  variables.tf
terraform/modules/compute/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/network/: README.md  main.tf  outputs.tf
terraform/modules/security/: README.md  main.tf  variables.tf
terraform/templates/: cloud-init.yml
(+47 files in other folders)
